--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ Exercises/Exercise-2/*.csv
 Exercises/Exercise-4/*.csv
 Exercises/Exercise-6/data/*.csv
 Exercises/Exercise-6/data/__MACOSX
-
+Exercises/Exercise-6/reports
